blank facial expression

--- a/scss/customfaces.scss
+++ b/scss/customfaces.scss
@@ -10,7 +10,7 @@
   );
 
   @include character-face("Nahua",
-    "Angry", "Bashful", "Blushy^Look",
+    "Angry", "Bashful", "Blank", "Blushy^Look",
     "Confused", "Disappointed", "Dizzy",
     "Expressionless", "Happy", "Joyful",
     "Look", "Look^Down", "Nervous", "Neutral",
