add monospace fallback for dep font (idk why i didnt do this sooner)

--- a/scss/experimental.scss
+++ b/scss/experimental.scss
@@ -35,7 +35,7 @@ body {
 }
 
 body {
-  font-family: "DEP", "Twemoji";
+  font-family: "DEP", "Twemoji", monospace;
   font-size: 21px;
   display: flex;
   flex-flow: column;
