--- a/tests/horse/styles.css
+++ b/tests/horse/styles.css
@@ -46,6 +46,7 @@ body {
   flex-direction: column;
   background-color: var(--hb2);
   color: var(--hb4);
+  touch-action: manipulation;
 }
 
 a {
@@ -149,6 +150,8 @@ button {
   & > iframe {
     width: 100%;
     height: 100%;
+    -webkit-overflow-scrolling: touch;
+    overflow: auto;
     border: none;
   }
 }
@@ -162,6 +165,9 @@ button {
   width: var(--info-offset);
   height: var(--info-offset);
   font-size: 1.5rem;
+  text-align: center;
+  padding: 0;
+  z-index: 1;
 }
 
 img.emoji {
@@ -194,7 +200,34 @@ code {
 
 /* for mobile devices that can't hover with touch controls */
 @media (max-aspect-ratio: 2/3) {
-  #visiting {
+  #horsebutton:not([disabled]) ~ #visiting {
     opacity: 1;
+  }
+  #horsebutton:has(~ #visiting:active) {
+    animation: 0.25s pop ease alternate;
+  }
+}
+
+@keyframes pop {
+  0% {
+    transform: initial;
+  }
+  20% {
+    transform: rotate(10deg) scale(1.1);
+  }
+  40% {
+    transform: rotate(-10deg) scale(1.2);
+  }
+  50% {
+    transform: rotate(0deg) scale(1.3);
+  }
+  60% {
+    transform: rotate(-10deg) scale(1.2);
+  }
+  80% {
+    transform: rotate(10deg) scale(1.1);
+  }
+  100% {
+    transform: initial;
   }
 }
