--- a/scss/textboxes.scss
+++ b/scss/textboxes.scss
@@ -206,6 +206,8 @@
     img {
       image-rendering: pixelated;
       font-size: 10px;
+      letter-spacing: 0px;
+      white-space: pre;
     }
     a, img {
       width: 88px;
