super cool ref sheet update

--- a/scss/textboxes.scss
+++ b/scss/textboxes.scss
@@ -108,6 +108,7 @@
   }
   [hover] {
     text-decoration: underline wavy var(--g2);
+    cursor: help;
   }
   [hover]:is(:hover, :active, :focus) {
     position: relative;
