--- a/scss/textboxes.scss
+++ b/scss/textboxes.scss
@@ -182,6 +182,11 @@
     &::after {
       content: none;
     }
+    
+    & a:is(:visited, :hover, :active, :link) {
+      color: var(--g1);
+      text-decoration: none;
+    }
   }
   
   span.break {
@@ -202,8 +207,7 @@
     padding: 0 20px;
     background-clip: padding-box;
     
-    &:hover,
-    &:active {
+    &:hover {
       cursor: pointer;
       background-color: var(--g2);
       animation: alternate hl 0.4s linear infinite;
